--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^25.0.0",
+    "getstream": "^3.13.0",
     "native-base": "^2.3.10",
     "prop-types": "^15.6.1",
     "react": "16.2.0",
