--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "expo": "^25.0.0",
     "getstream": "^3.13.0",
+    "immutable": "^3.8.2",
     "lodash": "^4.17.5",
     "native-base": "^2.3.10",
     "prop-types": "^15.6.1",
@@ -20,6 +21,7 @@
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "redux-actions": "^2.3.0",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
