--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
+    "redux-devtools-extension": "^2.13.2",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
